force-app/main/default/objects/Sales_Team__c/Sales_Team__c.object-meta.xml
<CustomObject>
    <label>Sales Team</label>
    <nameField>
        <label>Sales Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>