force-app/main/default/objects/Sales_Team__c/fields/FR_Name__c.field-meta.xml
<CustomField>
    <fullName>FR_Name__c</fullName>
    <externalId>true</externalId>
    <label>FR Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>