force-app/main/default/objects/Sales_Team__c/fields/Responsiblities__c.field-meta.xml
<CustomField>
    <fullName>Responsiblities__c</fullName>
    <label>Responsiblities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Member</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>